--- a/app/public/home.html
+++ b/app/public/home.html
@@ -10,7 +10,7 @@
     <!-- JQuery Link -->
     <script src="https://code.jquery.com/jquery.js"></script>
     <!-- CSS Sytle Sheet -->
-    <!-- <link rel="stylesheet" type="text/css" href="../css/style.css"> -->
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <div class="conatiner">
